Try Add Decorator

--- a/TP_nuisible/TP_nuisible.csproj
+++ b/TP_nuisible/TP_nuisible.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Decorator.cs" />
     <Compile Include="Ecosysteme.cs" />
+    <Compile Include="MutantDecorator.cs" />
     <Compile Include="Nuisible.cs" />
     <Compile Include="NuisibleFactory.cs" />
     <Compile Include="Pigeon.cs" />
